<resources>
    <string name="app_name">Custom Selection Group</string>
    <string name="option_a">Option A</string>
    <string name="sunny_day">Sunny Day</string>
    <string name="foggy_day">Foggy Day</string>
    <string name="foggy_night">Foggy Night</string>
    <string name="clear_night">Clear Night</string>
    <string name="no_option_selected">No option selected</string>
    <string name="submit">Submit</string>
    <string name="icon">icon</string>
    <string name="how_is_the_weather">How is the Weather?</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
</resources>