<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/how_is_the_weather"
        android:textColor="@color/text_color_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/myGridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/questionText"
        android:layout_margin="16dp"
        android:columnCount="2"
        android:rowCount="2">

        <LinearLayout
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/outlined_card"
            android:onClick="onCustomItemClick"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/option_a"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_01d" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sunny_day"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/outlined_card"
            android:onClick="onCustomItemClick"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/option_b"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_01n" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/clear_night"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/outlined_card"
            android:onClick="onCustomItemClick"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/option_c"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_50d" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/foggy_day"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@drawable/outlined_card"
            android:onClick="onCustomItemClick"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/option_d"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_50n" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/foggy_night"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:text="@string/submit" />

</RelativeLayout>